--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,5 @@
 <h1>Welcome#index</h1>
-<<<<<<< HEAD
 <p>MakutaSystem</p>
 <p>MakutaSystem2</p>
-=======
->>>>>>> 264ce2e10bb2edfcee4fccaea10614e5930ebc7a
+<p>MakutaSystem3</p>
 <p>Find me in app/views/welcome/index.html.erb</p>
