--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,5 @@
 <p>MakutaSystem</p>
 <p>MakutaSystem2</p>
 <p>MakutaSystem3</p>
+<P>MakutaSystem4</P>
 <p>Find me in app/views/welcome/index.html.erb</p>
