--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,4 +3,6 @@
 <p>MakutaSystem10</p>
 <p>MakutaSystem100</p>
 <P>MakutaSystem1000</P>
+<P>MakutaSystem1000000</P>
+<P>MakutaSystem1000000 20140119test </P>
 <p>Find me in app/views/welcome/index.html.erb</p>
