--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,5 +4,5 @@
 <p>MakutaSystem100</p>
 <P>MakutaSystem1000</P>
 <P>MakutaSystem1000000</P>
-<P>MakutaSystem1000000 20140119test test makuta yukio </P>
+<P>MakutaSystem1000000 20140202test makuta yukio </P>
 <p>Find me in app/views/welcome/index.html.erb</p>
