--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,6 @@
 <h1>Welcome#index</h1>
 <p>アジャイル開発手法特論</p>
 <p>第9回〜第10回、herokuの設定をする</p>
-<p>課題を提出します　幕田</p>
-<<<<<<< HEAD
-<P>MakutaSystem1000</P>
-<P>MakutaSystem1000000</P>
-<P>MakutaSystem1000000 20140202test makuta yukio </P>
-=======
->>>>>>> 4a2f016dc847954261833b38862b9f5bf01d77ee
+<p>課題を提出します　2014.7.29 幕田行雄</p>
+
 <p>Find me in app/views/welcome/index.html.erb</p>
