--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome#index</h1>
 <p>アジャイル開発手法特論</p>
 <p>第9回〜第10回、herokuの設定をする</p>
-<p>課題を提出します　2014.7.29 幕田行雄</p>
+<p>課題を提出します　2014.7.29 幕田</p>
 
 <p>Find me in app/views/welcome/index.html.erb</p>
